// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter table adding index key with one column and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding index key with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding index key with two columns and options. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      },
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding key with one column and option. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding key with one column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding key with two columns and options. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": "ik_id",
                    "index": {
                      "id": "P_INDEX_TYPE",
                      "def": "hash"
                    },
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id",
                          "length": 2,
                          "sort": "asc"
                        }
                      },
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "o_id"
                        }
                      }
                    ],
                    "options": [
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "keyBlockSize": 1024
                        }
                      },
                      {
                        "id": "O_INDEX_OPTION",
                        "def": {
                          "comment": "test"
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed index key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table adding unnamed key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "addIndex",
                    "name": null,
                    "index": null,
                    "columns": [
                      {
                        "id": "P_INDEX_COLUMN",
                        "def": {
                          "column": "id"
                        }
                      }
                    ],
                    "options": []
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping index. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropIndex",
                    "index": "i_oid"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropIndex",
                    "index": "k_oid"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table renaming index. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "renameIndex",
                    "index": "i_oid",
                    "newName": "ii_oid"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table renaming key. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "renameIndex",
                    "index": "k_oid",
                    "newName": "kk_oid"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;
